# llm-gateway

./: .envrc.example  .gitignore  Cargo.toml
console/: package.json
console/src/app/: layout.tsx  page.tsx
console/src/app/api/ai/[...path]/: route.ts
console/src/app/components/atoms/: button.tsx  row.tsx  textarea.tsx
console/src/app/components/molecules/: chat-input.tsx
console/src/app/components/organisms/: chat.tsx
crates/auth/: Cargo.toml
crates/auth/src/: auth.rs  cached_jwk_set.rs
crates/llm-gateway/: Cargo.toml
crates/llm-gateway/src/: app_state.rs  auth.rs  entities.rs  llm_delegate.rs  main.rs  secret_manager.rs
crates/llm-gateway/src/auth/: auth0_auth_provider.rs  auth_middleware.rs  auth_provider.rs  cognito_auth_provider.rs
crates/llm-gateway/src/entities/: anthropic.rs  openai.rs
crates/llm-gateway/src/llm_delegate/: llm_provider.rs  supported_llm.rs
crates/llm-gateway/src/llm_delegate/llm_provider/: anthropic.rs  anthropic_vertexai.rs  openai.rs  perplexityai.rs
crates/llm-gateway/src/secret_manager/: secret_manager_error.rs  secret_manager_provider.rs
crates/openai/: Cargo.toml
crates/openai/src/: openai.rs
src/: app_state.rs  auth.rs  llm_delegate.rs  main.rs  secret_manager.rs
src/entities/: anthropic.rs
src/llm_delegate/: supported_llm.rs
src/llm_delegate/llm_provider/: anthropic_vertexai.rs
src/secret_manager/: aws_secret_manager_provider.rs  env.rs  env_secret_manager_provider.rs  secret_manager_provider.rs
