[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/auth.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
axum-extra.workspace = true
headers.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
