[package]
name = "llm-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
async-openai = "0.23.4"
axum = "*"
axum-extra = { version = "*", features = ["typed-header"] }
futures = "0.3"
headers = "0.4"
jsonwebtoken = { version = "8.0", features = ["use_pem"] }
reqwest.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
tower = "*"
tower-http = { version = "0.5.0", features = ["fs", "trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

#----TO REMOVE
once_cell = "1.8"

[dev-dependencies]
eventsource-stream = "0.2"
reqwest-eventsource = "0.5"
