[package]
name = "llm-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
anthropic_vertex_ai = { git = "https://github.com/fdionisi/anthropic-sdk" }
anyhow = "*"
async-openai = "0.23.4"
async-stream = "0.3.5"
auth.workspace = true
axum-extra.workspace = true
axum.workspace = true
futures = "0.3"
headers.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio-stream = "0.1"
tokio.workspace = true
tower = "*"
tower-http = { version = "0.5.0", features = ["fs", "trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
eventsource-stream = "0.2"
reqwest-eventsource = "0.5"
